crates/query/src/snapshots/kcl_query__tests__list_variables.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "a": [
    {
      "name": "a",
      "type_name": "",
      "op_sym": "=",
      "value": "1",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
